<resources>
    <string name="app_name">IMDBooks</string>
    <string name="imd_books">IMD Books</string>
    <string name="delete_book">DELETE BOOK</string>
    <string name="book_code">ISBN</string>
    <string name="_1234567">1234567</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="book_description">Book description</string>
    <string name="stock_quantity">stock quantity</string>
    <string name="book_name">Book title</string>
    <string name="save">save</string>
    <string name="clear">clear</string>
    <string name="book_name_example">book name example</string>
    <string name="register_book">register book</string>
    <string name="book_description_example">book description example…</string>
    <string name="_123456789">123456789</string>
    <string name="login">Login</string>
    <string name="example_something_com">example@something.com</string>
    <string name="e_mail">e-mail</string>
    <string name="create_new_user">create new user</string>
    <string name="password_hint">****************</string>
    <string name="password">Password</string>
    <string name="returnTxt">return</string>
    <string name="update_book">update book</string>
    <string name="this_is_an_example_of_a_description">this is an example of a description</string>
    <string name="username">username</string>
    <string name="type_your_username">type your username:</string>
    <string name="return_to_login_screen">return to login screen</string>
    <string name="book_cover">book cover</string>
    <string name="title">title:</string>
    <string name="placeholder">placeholder</string>
    <string name="publisher">publisher:</string>
    <string name="pubplaceholder">pubplaceholder</string>
    <string name="published_on">published on:</string>
    <string name="_01_01_2001">01/01/2001</string>
    <string name="_01_01_2000">01/01/2000</string>
    <string name="book_publish_date">Book Publish date</string>
    <string name="https_www_url_com">https://www.url.com</string>
    <string name="book_title">book title</string>
    <string name="publshier_example">Publshier example</string>
    <string name="name_surename">Name Surename</string>
    <string name="book_publisher">Book Publisher</string>
    <string name="book_cover_url">book cover url</string>
    <string name="book_author">book author</string>
</resources>