<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:contentPadding="1sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="203dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="201dp"
                    android:layout_height="56dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView31"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/title" />

                    <TextView
                        android:id="@+id/bookName"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/placeholder" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="201dp"
                    android:layout_height="56dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView32"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/publisher"
                        android:textSize="11sp" />

                    <TextView
                        android:id="@+id/publisherValue"
                        android:layout_width="129dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/pubplaceholder" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="201dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView33"
                        android:layout_width="wrap_content"
                        android:layout_height="74dp"
                        android:layout_weight="1"
                        android:text="@string/published_on" />

                    <TextView
                        android:id="@+id/publishDate"
                        android:layout_width="wrap_content"
                        android:layout_height="74dp"
                        android:layout_weight="1"
                        android:text="@string/_01_01_2001" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/bookCover"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/book_cover"
                />

            </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>
