<?xml version="1.0" encoding="utf-8"?>
<!-- Layout principal utilizando ConstraintLayout para criar um design flexível e dinâmico -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- ConstraintLayout aninhado para agrupar os elementos dentro do layout principal -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundGravity="center_vertical|center_horizontal"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="74dp">

        <!-- Título da seção: "Atualizar Livro" -->
        <TextView
            android:id="@+id/textView12"
            android:layout_width="239dp"
            android:layout_height="35dp"
            android:text="@string/update_book"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.165" />

        <!-- Barra de cabeçalho com o texto "IMD Books" -->
        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="113dp"
            android:background="#2196F3"
            android:paddingVertical="20sp"
            android:text="@string/imd_books"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <!-- Botão para salvar as alterações -->
        <Button
            android:id="@+id/saveButton"
            android:layout_width="114dp"
            android:layout_height="47dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.154"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.76" />

        <!-- Botão para retornar à tela anterior -->
        <Button
            android:id="@+id/returnBtn"
            android:layout_width="114dp"
            android:layout_height="47dp"
            android:text="@string/returnTxt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.454"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.849" />

        <!-- Botão para limpar os campos de entrada -->
        <Button
            android:id="@+id/clearButton"
            android:layout_width="114dp"
            android:layout_height="47dp"
            android:text="@string/clear"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.777"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.76" />

        <!-- Campo de entrada para o nome do livro -->
        <EditText
            android:id="@+id/bookNameInput"
            android:layout_width="299dp"
            android:layout_height="45dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/book_name_example"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.41"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.281" />

        <!-- Rótulo para o campo de entrada do nome do livro -->
        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.142"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.23" />

        <!-- Campo de entrada para a descrição do livro -->
        <EditText
            android:id="@+id/bookDescInput"
            android:layout_width="299dp"
            android:layout_height="45dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/this_is_an_example_of_a_description"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.41"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.405" />

        <!-- Rótulo para o campo de entrada da descrição do livro -->
        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.159"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.349" />

        <!-- Campo de entrada para o código do livro -->
        <EditText
            android:id="@+id/bookCodeInput"
            android:layout_width="299dp"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="@string/_1234567"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.41"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.632" />

        <!-- Rótulo para o campo de entrada do código do livro -->
        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stock_quantity"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.145"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.453" />

        <!-- Rótulo para o campo de entrada do código do livro -->
        <TextView
            android:id="@+id/textView7"
            android:layout_width="123dp"
            android:layout_height="24dp"
            android:text="@string/book_code"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.159"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.564" />

        <!-- Campo de entrada para a quantidade em estoque -->
        <EditText
            android:id="@+id/bookCoverInput"
            android:layout_width="299dp"
            android:layout_height="45dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/_123456789"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.41"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.516" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>