<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- CardView para exibição dos detalhes do livro -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentPadding="16dp"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="8dp">

            <!-- Card com detalhes do Livro -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <!-- Book name -->
                <TextView
                    android:id="@+id/bookName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/placeholder" />

                <!-- Publisher -->
                <TextView
                    android:id="@+id/publisherValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/pubplaceholder"
                    android:layout_marginTop="8dp"/>

                <!-- Publish date -->
                <TextView
                    android:id="@+id/publishDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/_01_01_2001"
                    android:layout_marginTop="8dp"/>

                <!-- Book description -->
                <TextView
                    android:id="@+id/bookDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/pubplaceholder"
                    android:layout_marginTop="16dp"/>
            </LinearLayout>

            <!-- Book cover -->
            <ImageView
                android:id="@+id/bookCover"
                android:layout_width="120dp"
                android:layout_height="180dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:contentDescription="@string/book_cover" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Botão de retorno -->
    <Button
        android:id="@+id/buttonReturn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/returnTxt"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"/>
</LinearLayout>
